@@ -5,7 +5,7 @@
 
 #include "tao/Strategies/advanced_resource.h"
 
-const char *ior_output_file = "test.ior";
+const char *ior_output_file = "rtserver.ior";
 
 int
 main (int argc, char *argv[])
@@ -70,6 +70,15 @@ main (int argc, char *argv[])
       ACE_TRY_CHECK;
 
       // If the ior_output_file exists, output the ior to it
+      FILE *output_file= ACE_OS::fopen (ior_output_file, "w");
+      if (output_file == 0)
+        ACE_ERROR_RETURN ((LM_ERROR,
+                           "Cannot open output file for writing IOR: %s",
+                           ior_output_file),
+                              1);
+      ACE_OS::fprintf (output_file, "%s", ior.in ());
+      ACE_OS::fclose (output_file);
+
       ACE_DEBUG ((LM_DEBUG, "%s", ior.in ()));
 
       poa_manager->activate (ACE_ENV_SINGLE_ARG_PARAMETER);
